--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@ var svg = d3.select("body").append("svg")
   
   var dayIndex = function(dayName) {
     var days = {
-      LUNES: 1, MARTES: 2, MIÉRCOLES: 3, JUEVES: 4,
-      VIERNES :5, SÁBADO: 6, DOMINGO: 7
+     Core_ASR9K10_Agpr 10.5.108.241, Core_ASR9K01_Cana 10.5.152.241, Core_ASR9910_Cob 10.5.28.241, Core_ASR9K10_Gdl_GPON 10.5.56.241, Core_ASR9K10_Hmo 189.196.41.230, Core_ASR9K06_Lpaz 10.5.228.241, Core_ASR9K10_Lmm 10.5.16.241, Core_ASR9K01_Magda 10.5.148.241, Core_ASR9001_NZRI 10.5.160.241, Core_ASR9K10_Nav 10.5.24.241, Core_ASR9K06_Nog 10.5.100.241, Core_ASR9910_Qro 10.5.164.241, Core_ASR9K10_QRO_2 10.5.164.243, Core_ASR9K06_Scrz 10.5.12.241, Core_ASR9K06_Sjdc 10.5.52.241, Core_ASR9K10_Tep 10.5.156.241, Core_ASR99K6_Txp 10.5.20.241, Core_ASR9910_Tgz 10.5.140.241, Core_ASR9K06_Dgo 10.5.136.241, Core_ASR9K06_Gto 10.5.84.241, Core_ASR9K10_HMO_2 189.196.41.231, Core_ASR9K06_Joju 10.5.32.241, Core_ASR9910_Mor 10.5.184.241, Core_ASR9910_Vjo 10.5.240.243, Core_ASR9K10_Zac 10.5.176.241, Core_ASR9K01_Chco 10.5.192.241, Core_ASR9K10_Gys 10.5.44.241, Core_ASR9K10_Leon_2 189.196.41.233, Core_ASR9K06_Sala 10.5.220.241, Core_ASR9K10_TOLUCA_2 10.5.196.243, Core_ASR9K06_Urua 10.5.132.241, Core_ASR9K06_Col 10.5.222.241, Core_ASR9K10_Mzt 10.5.48.241, Core_ASR9K10_Tol 10.5.196.241, CORE_ASR9910_ZRA 10.5.88.241, Core_ASR9K06_Zih 10.5.208.241, Core_ASR9K01_Chgo 10.5.244.241, Core_ASR9K10_Xal 10.5.116.241
     };
     return days[dayName];
   }
